# repocheck

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
repocheck/: __init__.py  checks.py  cli.py  config.py  github_client.py  history.py  report.py
tests/: test_checks.py  test_end_to_end.py  test_github_client.py
