[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repocheck-cli"
version = "0.1.0"
description = "Scan any GitHub repo and get an instant engineering health report card."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Syed Ahmed Ali" }]
keywords = ["github", "cli", "code-quality", "devtools", "ci"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/Ahmed0754/repocheck"
Repository = "https://github.com/Ahmed0754/repocheck"
Issues = "https://github.com/Ahmed0754/repocheck/issues"

[project.scripts]
repocheck = "repocheck.cli:main"

[tool.setuptools.packages.find]
include = ["repocheck*"]
